@@ -9,13 +9,14 @@
      <groupId>name.richardson.james.bukkit</groupId>
      <artifactId>default-pom</artifactId>
      <version>5</version>
+     <relativePath></relativePath>
   </parent>
 
   <dependencies>
      <dependency>
            <groupId>name.richardson.james.bukkit</groupId>
            <artifactId>bukkit-utilities</artifactId>
-           <version>5.0.0-SNAPSHOT</version>
+           <version>5.0.1-SNAPSHOT</version>
      </dependency>
   </dependencies>
 
