@@ -1,25 +1,0 @@
-# Plugin messages
-alias.description: Associate player names to IP addresses.
-
-aliashandler.associate-player: Associating {1} with {0}. 
-
-checkcommand.name: check
-checkcommand.description: Check the database for associated records.
-checkcommand.use.name: check
-checkcommand.use.description: Allow users to check the database for associated records.
-checkcommand.usage: <player>
-checkcommand.no-names: no names
-checkcommand.one-name: one name
-checkcommand.many-names: {0,number} names
-checkcommand.no-names-found: &YELLOWNo record available.
-checkcommand.header: &AQUA{1} &LIGHT_PURPLEhas used &AQUA{0}.
-checkcommand.list-item: &YELLOW- {0}: &GREEN{1} 
-
-## Delete Command
-deletecommand.name: delete
-deletecommand.description: Delete an alias
-deletecommand.use.name: delete
-deletecommand.use.description: Allow users to remove an alias from a player.
-deletecommand.usage: <player> <alias>
-deletecommand.dessociated-player: &YELLOW{0} &GREENis no longer associated with &YELLOW{1}.
-deletecommand.specify-player-names: You must specify two player names!
