@@ -1,0 +1,9 @@
+checkcommand.name: check
+checkcommand.description: Check the database for associated records.
+checkcommand.usage: <player>
+deletecommand.name: delete
+deletecommand.description: Delete an alias
+deletecommand.usage: <player> <alias>
+helpcommand.description: Get help on a particular command.
+helpcommand.name: help
+helpcommand.usage: <name>
