@@ -1,0 +1,23 @@
+error.permission-denied: &REDYou are not allowed to do this.
+error.specify-player-names: You must specify two player names!
+
+notice.associate-player: Associating {1} with {0}. 
+notice.check-header: &AQUA{1} &LIGHT_PURPLEhas used &AQUA{0}.
+notice.check-list-item: &YELLOW- {0}: &GREEN{1} 
+notice.dessociated-player: &YELLOW{0} &GREENis no longer associated with &YELLOW{1}.
+notice.helpcommand.entry: &RED/{0} &YELLOW{1} {2}
+notice.helpcommand.hint: &GREENType &YELLOW/{0} {1} &GREENfor details about a command.
+notice.no-names-found: &YELLOWNo record available.
+notice.sqlstorage.creating-database: Creating new database.
+notice.sqlstorage.rebuilt-schema: Rebuilt database schema.
+
+plugin.description: Associate player names to IP addresses.
+
+shared.choice.many-names: {0,number} names
+shared.choice.no-names: no names
+shared.choice.one-name: one name
+
+warning.sqlstorage.already-initalised: Database is already initialized.
+warning.sqlstorage.schema-invalid: Database schema is invalid.
+warning.unable-to-hook-alias: Alias integration requested but plugin not found.
+warning.updater.unable-to-read-metadata: Unable to read metadata from {0}
