@@ -1,17 +1,0 @@
-logger.prefix: [BanHammer] 
-
-permission-denied: &REDYou are not allowed to do that.
-
-sqlstorage.schema-invalid: Database schema is invalid.
-sqlstorage.rebuilt-schema: Rebuilt database schema.
-sqlstorage.creating-database: Creating new database.
-sqlstorage.already-initalised: Database is already initialized.
-
-updater.new-version-available: &LIGHT_PURPLEA new version of &AQUA{0} ({1}) &LIGHT_PURPLEis available.
-updater.unable-to-read-metadata: Unable to read metadata from {0}
-
-helpcommand.name: help
-helpcommand.description: Get help on a particular command.
-helpcommand.usage: <name>
-helpcommand.hint: &GREENType &YELLOW/{0} {1} &GREENfor details about a command.
-helpcommand.help-entry: &RED/{0} &YELLOW{1} {2}
